# ArborOS

./: Cargo.toml  README.md  build.ps1
.cargo/: config
scripts/: install-prereqs.ps1  install-prereqs.sh  start-qemu-for-debugging-in-vscode.sh
src/: cpu.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  qemu.rs  serial.rs  test.rs
src/arch/: mod.rs
src/arch/x86_64/: cpu.rs  interrupts.rs  mod.rs  vmem.rs
src/boot/: bios.rs  mod.rs  services.rs
src/devices/: mod.rs  qemu.rs  serial.rs
src/devices/vga/: buffer.rs  color.rs  mod.rs  writer.rs
src/memory/: mod.rs
src/vga/: buffer.rs  color.rs  mod.rs  writer.rs
tests/: basic_boot.rs  panic_handler.rs  stack_overflow.rs
