[package]
name = "arbor_os"
version = "0.1.0"
authors = ["Andrew Stanton-Nurse <andrew@andrewnurse.net>"]
edition = "2018"
publish = false

[dependencies]
bootloader = { version = "0.6.0", features = ["map_physical_memory"] }
x86_64 = "0.6.0"
volatile = "0.2.6"
spin = "0.5.0"
array-init = "0.0.4"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-arbor_os.json"
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "mon:stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 30

[[test]]
name = "panic_handler"
harness = false

[[test]]
name = "stack_overflow"
harness = false